<resources>
    <string name="app_name">CS3270A9 Durfee</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_required">Name(Required):</string>
    <string name="course_code">Course Code:</string>
    <string name="start_at">Start at:</string>
    <string name="end_at">End at:</string>
    <string name="save">Save</string>
    <string name="title_activity_main">CS3270A8 Charles Durfee</string>
    <string name="action_settings">Settings</string>
    <string name="recyclerInterfaceError">Must use recycler interface</string>
    <string name="ViewInterfaceError">Must use view interface</string>
    <string name="delete_message">Are you sure you want to delete this Course?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="DeleteInterfaceError">Must use delete dialog interface</string>
    <string name="id">ID:</string>
    <string name="nameNewCourse">Name:</string>
    <string name="course_codeNewCourse">Course Code:</string>
    <string name="start_atNewCourse">Start at:</string>
    <string name="end_atNewCourse">End at:</string>
</resources>
